--- a/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/zh-Hans.lproj/Localizable.strings
@@ -17,7 +17,8 @@
 "user_list_nodata_tips"="欢迎来到声网1V1私密房，目前暂无其它用户入场，你可邀约朋友入场体验。";
 "user_list_refresh_tips"="用户列表已刷新";
 "call_not_init"="网络异常";
-"call_state_waitting"="等待对方接受";
+"call_state_caller_waitting"="等待对方接受";
+"call_state_callee_waitting"="邀请你私密视频连线";
 "call_state_connecting"="连接中";
 "call_title_accept"="立即接受";
 "call_title_reject"="拒绝";
