--- a/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/zh-Hans.lproj/Localizable.strings
@@ -11,6 +11,10 @@
 "user_list_waitting"="暂无主播在线，你来创建一个吧！";
 "user_list_create_room"="创建房间";
 "user_list_nodata_tips"="欢迎来到声网1V1私密房，目前暂无主播开播，你可以叫上你的朋友一起来体验我们的场景功能。";
+"create_room_tips"="填写房间名称，吸引更多观众";
+"create_room_title"="房间名称";
+"create_room_random"="随机";
+"create_room_name_empty_tips"="房间名称不能为空";
 "call_usage_tips"=" 本产品仅用于功能体验，单次直播时长不超过20mins";
 "call_toast_hangup"="对方结束连线";
 "setting_statistic" = "实时数据";
