--- a/Android/scenes/pure1v1/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/pure1v1/src/main/res/values-zh/strings.xml
@@ -10,4 +10,23 @@
     <string name="pure1v1_call_waiting_acceptance">等待对方接受…</string>
     <string name="pure1v1_call_connecting">连接中…</string>
     <string name="pure1v1_call_toast_hangup">对方结束连线</string>
+    <string name="pure1v1_dashboard_item">实时数据</string>
+    <!--    dashboard-->
+    <string name="pure1v1_dashboard_bitrate">码率: %s kbps</string>
+    <string name="pure1v1_dashboard_up_bitrate">发送码率: %s kbps</string>
+    <string name="pure1v1_dashboard_down_bitrate">接收码率: %s kbps</string>
+    <string name="pure1v1_dashboard_fps">帧率: %s fps</string>
+    <string name="pure1v1_dashboard_delay">延迟: %s ms</string>
+    <string name="pure1v1_dashboard_loss_package">丢包率: %s ％</string>
+    <string name="pure1v1_dashboard_up_net_speech">上行网络: %s KB/s</string>
+    <string name="pure1v1_dashboard_down_net_speech">下行网络: %s KB/s</string>
+    <string name="pure1v1_dashboard_resolution">分辨率: %s</string>
+    <string name="pure1v1_dashboard_up">发送端</string>
+    <string name="pure1v1_dashboard_encode_resolution">编码分辨率: %s</string>
+    <string name="pure1v1_dashboard_encode_fps">编码帧率: %s fps</string>
+    <string name="pure1v1_dashboard_up_loss_package">上行丢包率: %s ％</string>
+    <string name="pure1v1_dashboard_down">接收端</string>
+    <string name="pure1v1_dashboard_receive_resolution">接收分辨率: %s</string>
+    <string name="pure1v1_dashboard_receive_fps">接收帧率: %s fps</string>
+    <string name="pure1v1_dashboard_down_loss_package">下行丢包率: %s ％</string>
 </resources>
