--- a/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/en.lproj/Localizable.strings
@@ -17,8 +17,11 @@
 "room_list_refresh_tips"="房间列表已刷新";
 "call_not_init"="网络异常";
 "call_state_connecting"="连接中";
+"call_broadcaster_private"="Call privately";
 "user_list_waitting"="暂无主播在线，你来创建一个吧！";
 "user_list_create_room"="创建房间";
+"user_list_create"="创建";
+"user_list_creating"="创建中";
 "user_list_live_tag"="Live";
 "user_list_user_leave"="Come back soon";
 "user_list_nodata_tips"="欢迎来到声网1V1私密房，目前暂无主播开播，你可以叫上你的朋友一起来体验我们的场景功能。";
