--- a/Android/scenes/pure1v1/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/pure1v1/src/main/res/values-zh/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
     <string name="pure1v1_room_list_title">1V1私密房</string>
+    <string name="pure1v1_room_list_refresh">用户列表已刷新</string>
     <string name="pure1v1_room_list_empty_title">等待其它用户入场</string>
     <string name="pure1v1_room_list_empty_content">欢迎来到声网1V1私密房，目前暂无其它用户入场，你可邀约朋友入场体验。</string>
     <string name="pure1v1_call_receive_invitation">邀请你私密视频连线</string>
@@ -10,6 +11,9 @@
     <string name="pure1v1_call_waiting_acceptance">等待对方接受…</string>
     <string name="pure1v1_call_connecting">连接中…</string>
     <string name="pure1v1_call_toast_hangup">对方结束连线</string>
+    <string name="pure1v1_call_toast_rejected">对方已拒绝</string>
+    <string name="pure1v1_call_toast_no_answer">无应答</string>
+    <string name="pure1v1_call_content_inspect">监测到当前内容存在违规行为</string>
     <string name="pure1v1_dashboard_item">实时数据</string>
     <!--    dashboard-->
     <string name="pure1v1_dashboard_bitrate">码率: %s kbps</string>
