--- a/Android/scenes/showTo1v1/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/showTo1v1/src/main/res/values-zh/strings.xml
@@ -3,4 +3,10 @@
     <string name="show_to1v1_room_list_empty_title">暂无主播在线，你来创建一个吧！</string>
     <string name="show_to1v1_room_list_empty_content">欢迎来到声网1V1私密房，目前暂无主播开播，你可以叫上你的朋友一起来体验我们的场景功能。</string>
     <string name="show_to1v1_create_room">创建房间</string>
+    <string name="show_to1v1_room_name">房间名称</string>
+    <string name="show_to1v1_random">随机</string>
+    <string name="show_to1v1_room_name_hint">填写房间名称，吸引更多观众</string>
+    <string name="show_to1v1_create_room_tips">本产品仅用于功能体验，单次直播时长不超过20mins</string>
+    <string name="show_to1v1_create">创建</string>
+    <string name="show_to1v1_creating">创建中…</string>
 </resources>
