--- a/iOS/AgoraEntScenarios/Resource/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Resource/en.lproj/Localizable.strings
@@ -150,3 +150,17 @@
 "validate_failed" = "验证码校验失败，请重试";
 "after_send_tip" = "秒后可重新发送";
 
+"feedback_tags_flashback" = "闪退";
+"feedback_tags_audioStuck" = "音频卡顿";
+"feedback_tags_videoStuck" = "视频卡顿";
+"feedback_tags_abnormal_communication" = "通信异常";
+"feedback_tags_functional_recommendations" = "功能建议";
+"feedback_tags_other" = "其它";
+"feedback_desc" = "描述";
+"feedback_textView_placeholder" = "您的意见将帮助我们更快成长";
+"feedback_upload_log_tips" = "同时上传本机声动互娱通话日志";
+"feedback_submit" = "提交";
+"feedback_tags_tips" = "请至少选择一个反馈类型再提交";
+"feedback_upload_image_fail" = "图片上传失败";
+"feedback_result_tips" = "提交成功，感谢反馈";
+"feedback_result_desc" = "如您的问题比较紧急，请致电客服";
