--- a/Android/scenes/show/src/main/res/values/strings.xml
+++ b/Android/scenes/show/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="show_create_room">创建房间</string>
-    <string name="show_create_tips1">欢迎来到声网秀场直播！</string>
+    <string name="show_create_tips1">欢迎来到声网直播！\n视频『高清』升级，人更美、物更真，体验更流畅，\n为直播变现增添更多 buff</string>
     <string name="show_living">直播中</string>
     <string name="show_room_id">ID: %s</string>
     <string name="show_user_count">%d人</string>
