--- a/Android/app/src/main/res/values-zh/strings.xml
+++ b/Android/app/src/main/res/values-zh/strings.xml
@@ -69,11 +69,9 @@
     <string name="app_about_us">关于我们</string>
     <string name="app_submit_feedback">提交反馈</string>
     <string name="app_debug_mode">开发者模式</string>
-
     <string name="app_exit">退出</string>
     <string name="app_and">及</string>
     <string name="app_confirm_deletion">确认删除？</string>
-
     <string name="app_please_input_account">请输入手机号</string>
     <string name="app_error_pwd_tip">8~20个字符，包含大、小写字母和数字</string>
     <string name="app_please_input_pwd">请输入密码</string>
@@ -86,7 +84,6 @@
     <string name="app_mobile_number">手机号</string>
     <string name="app_v_code">验证码</string>
     <string name="app_plus_86">+86</string>
-
     <string name="app_logout_account">退出登录</string>
     <string name="app_logoff_account">注销账号</string>
     <string name="app_logoff_account_tips">注销后，您将无法使用当前账号体验我们的服务，请谨慎考虑</string>
@@ -95,6 +92,21 @@
     <string name="app_logout_confirm">退出登录</string>
     <string name="app_logout_cancel">\u3000取消\u3000</string>
     <string name="app_logout_account_tips">退出登录后，我们将保留您的数据信息，期待下次与您相遇</string>
+    <string name="app_feedback_reason_crash">闪退</string>
+    <string name="app_feedback_reason_audio_lag">音频卡顿</string>
+    <string name="app_feedback_reason_video_lag">视频卡顿</string>
+    <string name="app_feedback_reason_communication_exception">通信异常</string>
+    <string name="app_feedback_reason_functional_construction">功能建议</string>
+    <string name="app_feedback_reason_other">其他</string>
+    <string name="app_feedback_describe">描述</string>
+    <string name="app_feedback_input_tips">您的意见将帮助我们更快成长</string>
+    <string name="app_feedback_upload">同时上传本机声动互娱通话日志</string>
+    <string name="app_feedback_submit">提交</string>
+    <string name="app_feedback_reason_empty_tips">请至少选择一个反馈类型再提交</string>
+    <string name="app_feedback_image_limit">当前图片过大，必须小于5M</string>
+    <string name="app_feedback_success">提交成功，感谢反馈</string>
+    <string name="app_feedback_call_customer_service">如您的问题比较紧急，请致电客服</string>
+    <string name="app_feedback_contact_the_customer_service">联系客服</string>
 
     <string name="app_voice_chat">语聊房</string>
     <string name="app_show_live">秀场直播</string>
