--- a/Android/scenes/ktv_relay/src/main/res/values/strings.xml
+++ b/Android/scenes/ktv_relay/src/main/res/values/strings.xml
@@ -5,12 +5,15 @@
     <string name="ktv_loading">加载中…</string>
     <string name="ktv_create_room">创建房间</string>
     <string name="ktv_people_count">%d人</string>
-    <string name="ktv_room_title">房间标题</string>
+    <string name="ktv_room_title">房间名称</string>
     <string name="ktv_random">随机</string>
     <string name="ktv_room_is_encryption">房间是否加密</string>
     <string name="ktv_open">公开</string>
     <string name="ktv_encryption">加密</string>
+    <string name="ktv_room_name_hint">填写房间名称，吸引更多观众</string>
     <string name="ktv_please_input_4_pwd">请设置4位数房间密码</string>
+    <string name="ktv_room_pwd">房间密码</string>
+    <string name="ktv_create_room_tips">本应用为测试产品，仅用于功能体验，请勿商用。单次使用时长不超过20分钟，过时房问将自动解散。为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。警惕电信诈骗，请勿在使用过程中进行货款申请和网银转账！国家反诈专用号码：96110</string>
     <string name="ktv_net_status_good">本机网络好</string>
     <string name="ktv_net_status_m">本机网络良</string>
     <string name="ktv_net_status_low">本机网络差</string>
@@ -23,10 +26,7 @@
     <string name="ktv_mv">MV</string>
     <string name="ktv_song_background">歌词背景</string>
     <string name="ktv_more_actions">更多操作</string>
-    <string name="ktv_create">创建</string>
     <string name="ktv_create_tips1">欢迎来到声网在线K歌房，\n美声音效、歌词同步、打分等九大场景轻松还\n原线下K歌体验，超高音质，以歌会友，一起\n来体验吧！</string>
-    <string name="ktv_create_tips2">本应用为测试产品，请勿商用</string>
-    <string name="ktv_create_tips3">单次K歌最长20分钟，每个房间最多8人</string>
     <string name="ktv_create_tips4">欢迎来到声网抢麦接唱游戏，\n热歌劲曲、歌词同步、动态打分等功能一站体验，\n一起来抢吧！</string>
     <string name="ktv_room_before_speaker">点击空麦位，上麦后加入游戏</string>
     <string name="ktv_room_owner">房主</string>
