--- a/Android/common/ui-widget/src/main/res/values/strings.xml
+++ b/Android/common/ui-widget/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="room_has_close">房主已解散房间，请确认离开房间</string>
     <string name="confirm_to_dismiss_room">确认解散该房间吗？</string>
     <string name="confirm_to_exit_room">确认退出该房间吗？</string>
@@ -14,11 +13,15 @@
     <string name="disagree">不同意</string>
     <string name="disagree1">不同意并退出</string>
     <string name="confirm">确认</string>
+
     <string name="edit_name">修改昵称</string>
     <string name="input_edit_name">请输入昵称</string>
     <string name="input_password">请输入房间密码</string>
+
     <string name="i_know">我知道了</string>
+
     <string name="avatar">头像</string>
+
     <string name="select_from_album">相册中选择</string>
     <string name="photograph">拍照</string>
     <string name="complete_validation">完成验证</string>
@@ -31,18 +34,18 @@
     <string name="time_up_exit_room">您已体验超过20分钟，当前房间已过期，请退出重新创建房间</string>
     <string name="expire_exit_room">当前房间已过期，请退出</string>
 
-    <string name="report_room">Report</string>
-    <string name="report_room_success">Reported</string>
-    <string name="comm_permission_leak_auido_title">No microphone permission</string>
-    <string name="comm_permission_leak_auido_content">Please turn on microphone permission in settings</string>
-    <string name="comm_permission_leak_camera_title">No camera permission</string>
-    <string name="comm_permission_leak_camera_content">Please turn on camera permissions in settings</string>
-    <string name="comm_permission_leak_sdcard_title">No photo and video permissions</string>
-    <string name="comm_permission_leak_sdcard_content">Please turn on photo and video permissions in settings</string>
-    <string name="comm_permission_leak_other_title">You do not have the required permissions to run</string>
-    <string name="comm_permission_leak_other_content">Please open the required permissions to run in the settings</string>
-    <string name="comm_setting">setups</string>
+    <string name="report_room">举报</string>
+    <string name="report_room_success">举报成功</string>
 
+    <string name="comm_permission_leak_auido_title">没有麦克风权限</string>
+    <string name="comm_permission_leak_auido_content">请在设置中打开麦克风权限</string>
+    <string name="comm_permission_leak_camera_title">没有相机权限</string>
+    <string name="comm_permission_leak_camera_content">请在设置中打开相机权限</string>
+    <string name="comm_permission_leak_sdcard_title">没有照片和视频权限</string>
+    <string name="comm_permission_leak_sdcard_content">请在设置中打开照片和视频权限</string>
+    <string name="comm_permission_leak_other_title">没有运行所需权限</string>
+    <string name="comm_permission_leak_other_content">请在设置中打开运行所需权限</string>
+    <string name="comm_setting">设置</string>
     <string name="comm_try_again">请重试</string>
 
 </resources>
