--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/en.lproj/Localizable.strings
@@ -185,7 +185,7 @@
 "voice_AIAEC_audition" = "AI回声消除试听";
 "voice_AGC_audition" = "人声自动增益试听";
 "voice_room_announcement_changed" = "语聊房公告变更!";
-"voice_time_limit_desc" = "The experience limit has been reached. This room has been closed";
+"voice_time_limit_desc" = "已踢出房间";
 "voice_close_bot" = "关闭机器人";
 "voice_other_settings" = "其他设置";
 "voice_welcome" = "欢迎";
