--- a/iOS/AgoraEntScenarios/Scenes/KTV/KtvResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/KTV/KtvResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -61,6 +61,7 @@
 "ktv_leave_msg" = "关闭歌房后所有成员将被移除房间";
 "ktv_music_menu_dialog_title" = "控制台";
 "ktv_music_menu_dialog_ear" = "耳返";
+"ktv_earback_micphone_pull" = "耳返已关闭，请插入耳机重新开启";
 "ktv_music_menu_dialog_tone" = "升降调";
 "ktv_music_menu_dialog_vol1" = "人声音量";
 "ktv_music_menu_dialog_remote_volume" = "远端音量";
