--- a/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/VoiceChatRoom/VoiceChatRoomResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -6,6 +6,7 @@
   
 */
 //
+"voice_agora_name"="声网";
 "voice_app_name"="声网语聊房";
 "voice_app_all"="全部";
 "voice_chat_room"="语聊房";
@@ -184,7 +185,7 @@
 "voice_AIAEC_audition" = "AI回声消除试听";
 "voice_AGC_audition" = "人声自动增益试听";
 "voice_room_announcement_changed" = "语聊房公告变更!";
-"voice_time_limit_desc" = "The experience limit has been reached. This room has been closed";
+"voice_time_limit_desc" = "已踢出房间";
 "voice_close_bot" = "关闭机器人";
 "voice_other_settings" = "其他设置";
 "voice_welcome" = "欢迎";
