--- a/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/zh-Hans.lproj/Localizable.strings
@@ -23,7 +23,7 @@
 "user_list_create"="创建";
 "user_list_creating"="创建中";
 "user_list_live_tag"="Live";
-"user_list_user_leave"="Come back soon";
+"user_list_user_leave"="Hi，我暂时有事,很快回来";
 "user_list_nodata_tips"="欢迎来到声网1V1私密房，目前暂无主播开播，你可以叫上你的朋友一起来体验我们的场景功能。";
 "create_room_tips"="填写房间名称，吸引更多观众";
 "create_room_title"="房间名称";
