--- a/Android/scenes/ktv/src/main/res/values/strings.xml
+++ b/Android/scenes/ktv/src/main/res/values/strings.xml
@@ -193,6 +193,7 @@
     <string name="ktv_highlight_disable">人声突出已失效</string>
     <string name="ktv_highlight_limit">每首歌仅可设置一次人声突出对象，请在下首歌再设置</string>
 
+    <string name="ktv_debug">Debug</string>
     <string name="ktv_debug_settings">开发者设置</string>
     <string name="ktv_debug_settings_scoring_difficulty">打分难度</string>
     <string name="ktv_debug_settings_scoring_compensation">打分补偿</string>
